# cusotmer-support-bot-be

./: .gitignore  README.md
ai/: main.py  pyproject.toml  rag.py  schemas.py  vector_store.py
api/: package-lock.json  package.json  requests.http  server.js
api/controllers/: aiController.js
api/routes/: aiRoutes.js
api/services/: aiService.js
